cluster/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    servicebroker_etcd_node: instanceid-etcd0
    servicebroker: instanceid-etcd
  name: sb-instanceid-etcd0
spec:
  containers:
  - command:
    - /etcd
    - -name
    - etcd0
    - -initial-advertise-peer-urls
    - http://sb-instanceid-etcd0:2380
    - -listen-peer-urls
    - http://0.0.0.0:2380
    - -listen-client-urls
    - http://0.0.0.0:2379
    - -advertise-client-urls
    - http://sb-instanceid-etcd.app.asiainfodata.com:80
    - -initial-cluster-token 
    - sb-instanceid-etcd
    - -initial-cluster
    - etcd0=http://sb-instanceid-etcd0:2380
    - -initial-cluster-state
    - new
    image: quay.io/coreos/etcd:latest
    imagePullPolicy: IfNotPresent
    name: etcd0
    ports:
    - containerPort: 2379
      name: client
      protocol: TCP
    - containerPort: 2380
      name: server
      protocol: TCP
  restartPolicy: Never
