cluster/svc-all.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      run: etcd-1
    name: etcd-1
  spec:
    ports:
    - name: port-1
      port: 2379
      protocol: TCP
      targetPort: 2379
    - name: port-2
      port: 2380
      protocol: TCP
      targetPort: 2380
    selector:
      run: etcd-1
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      run: etcd-2
    name: etcd-2
  spec:
    ports:
    - name: port-1
      port: 2379
      protocol: TCP
      targetPort: 2379
    - name: port-2
      port: 2380
      protocol: TCP
      targetPort: 2380
    selector:
      run: etcd-2
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      run: etcd-3
    name: etcd-3
  spec:
    ports:
    - name: port-1
      port: 2379
      protocol: TCP
      targetPort: 2379
    - name: port-2
      port: 2380
      protocol: TCP
      targetPort: 2380
    selector:
      run: etcd-3
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    name: glusterfs-cluster
  spec:
    ports:
    - port: 1
      protocol: TCP
      targetPort: 1
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      etcd: test
    name: sb-etcd-test
  spec:
    ports:
    - port: 2379
      protocol: TCP
      targetPort: 2379
    selector:
      run: etcd-1
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata: {}
