cluster/route.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      etcd: test
    name: hh
  spec:
    host: etcd-test12-test.app.dataos.io
    to:
      kind: Service
      name: sb-etcd-test
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2016-09-22T02:01:44Z
        status: "True"
        type: Admitted
      host: etcd-test12-test.app.dataos.io
      routerName: router
kind: List
metadata: {}
